--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+<link rel="stylesheet" href="styles.2b6db4eb06323fff98bf.css"></head>
 <body>
-  <app-root>
+  <app-root class="center">
   </app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.689bc193da6e338e082b.js" type="module"></script><script src="main-es5.689bc193da6e338e082b.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.42d53cd0aa5f7ae88329.js" type="module"></script><script src="main-es5.42d53cd0aa5f7ae88329.js" nomodule defer></script></body>
 </html>
